--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,56 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+
+.Banner {
+  background-color: rgb(245, 255, 253);
+}
+
+.TeacherHeaderBackground {
+  background-color: rgb(172, 98, 98);
+  border-radius: 15%;
+}
+
+.StudentHeaderBackground {
+  background-color: rgb(245, 240, 114);
+  border-radius: 15%;
+}
+
+.ResourceHeaderBackground {
+  background-color: rgb(97, 189, 192);
+  border-radius: 15%;
+}
+
+.LessonHeaderBackground {
+  background-color: rgb(82, 219, 116);
+  border-radius: 15%;
+}
+
+.IndexHeaderBackground {
+  background-color: rgb(155, 214, 248);
+  border-radius: 15%;
 }
