Update PDF viewer

--- a/src/Resources/ResourceViewer/ResourceViewer.css
+++ b/src/Resources/ResourceViewer/ResourceViewer.css
@@ -2,3 +2,13 @@
 .Center {
   text-align: center;
 }
+
+page {
+  flex-direction: 'row';
+  background-color: '#E4E4E4';
+}
+section {
+  margin: 10;
+  padding: 10;
+  flex-grow: 1;
+}
