--- a/src/Resources/ResourceViewer/ResourceViewer.css
+++ b/src/Resources/ResourceViewer/ResourceViewer.css
@@ -12,3 +12,9 @@ section {
   padding: 10;
   flex-grow: 1;
 }
+
+.pdf {
+  border: 2px solid rgb(0, 255, 42);
+  width: 100%;
+  height: 1200px;
+}
